--- a/Resources/Private/Partials/Header.html
+++ b/Resources/Private/Partials/Header.html
@@ -1,23 +1,20 @@
 <f:section name="Header">
-	<header class="navbar navbar-inverse">
-		<div class="container custom-nav">
-			<div class="col-lg-12">
-				<div class="navbar-header">
-					<button data-target=".bs-navbar-collapse" data-toggle="collapse" type="button" class="navbar-toggle collapsed">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<f:cObject typoscriptObjectPath="lib.misc.logo" />
-				</div>
-
-				<nav role="navigation" class="navbar-collapse bs-navbar-collapse collapse" >
-					<f:cObject typoscriptObjectPath="lib.nav.main" />
-					<f:cObject typoscriptObjectPath="lib.nav.language" />
-					<f:cObject typoscriptObjectPath="lib.misc.searchbox"/>
-				</nav>
+	<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+		<div class="container">
+			<div class="navbar-header">
+				<button class="navbar-toggle" type="button" data-toggle="collapse"
+					data-target=".bs-navbar-collapse">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a href="../" class="navbar-brand">Bootstrap</a>
 			</div>
+			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+				<f:cObject typoscriptObjectPath="lib.nav.main" />
+				<f:cObject typoscriptObjectPath="lib.nav.language" />
+				<f:cObject typoscriptObjectPath="lib.misc.searchbox"/>
+			</nav>
 		</div>
 	</header>
 </f:section>
