IMPROVE:header data and some configuration

--- a/Resources/Private/Partials/Header.html
+++ b/Resources/Private/Partials/Header.html
@@ -1,5 +1,5 @@
 <f:section name="Header">
-	<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+	<header class="navbar navbar-inverse navbar-fixed-top bb-header" role="banner">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle" type="button" data-toggle="collapse"
@@ -8,7 +8,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a href="../" class="navbar-brand">Bootstrap</a>
+				<f:cObject typoscriptObjectPath="lib.misc.logo" />
 			</div>
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 				<f:cObject typoscriptObjectPath="lib.nav.main" />
