IMPROVEMENT: header and sub header

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,9 +1,8 @@
 <div class="hidden"><f:cObject typoscriptObjectPath="lib.misc.accessibility" /></div>
 <f:render section="Header" partial="Header"/>
+<f:render section="SubHeader" partial="SubHeader"/>
+
 <div class="container">
-	<div class="row">
-		<f:render section="SocialMedia" partial="SocialMedia"/>
-	</div>
 	<f:render section="Breadcrumb" partial="Breadcrumb"/>
 	<!--TYPO3SEARCH_begin-->
 	<div id="main-content">
@@ -11,5 +10,8 @@
 		<f:render section="Content"/>
 	</div>
 	<!--TYPO3SEARCH_end-->
+	<div class="row">
+		<f:render section="SocialMedia" partial="SocialMedia"/>
+	</div>
 </div>
 <f:render section="Footer" partial="Footer"/>
