--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -1,12 +1,32 @@
 @CHARSET "UTF-8";
-.bb-header {
-	text-shadow: 0 -1px 0 rgba(0,0,0,.15);
-	background-color: #563d7c;
-	border-color: #463265;
-	box-shadow: 0 1px 0 rgba(255,255,255,.1);
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+	padding-top: 50px;
+	padding-bottom: 20px;
 }
-.navbar-inverse .navbar-nav>.active>a,
-.navbar-inverse .navbar-nav>.active>a:hover,
-.navbar-inverse .navbar-nav>.active>a:focus {
-	background-color: #463265;
-}
+
+/* START: Header and Sub Custom Style */
+	.bb-header {
+		text-shadow: 0 -1px 0 rgba(0,0,0,.15);
+		background-color: #563d7c;
+		border-color: #463265;
+		box-shadow: 0 1px 0 rgba(255,255,255,.1);
+	}
+	.bb-subheader {
+		color: #cdbfe3;
+		background-color: #563d7c;
+	}
+	
+	/* BLOG: Blog override style of bootstrap */
+		.navbar-inverse .navbar-nav>.active>a,
+		.navbar-inverse .navbar-nav>.active>a:hover,
+		.navbar-inverse .navbar-nav>.active>a:focus {
+			background-color: #463265;
+		}
+		
+		.navbar-form {
+			padding-right: 0px;
+		}
+	/* BLOG END: Blog override style of bootstrap */
+
+/* END: Header and Sub Custom Style */
