--- a/Resources/Private/Partials/Breadcrumb.html
+++ b/Resources/Private/Partials/Breadcrumb.html
@@ -1,3 +1,7 @@
 <f:section name="Breadcrumb">
-	<f:cObject typoscriptObjectPath="lib.nav.breadcrumb"/>
+	<div class="col-lg-12">
+		<nav id="breadcrumb">
+			<f:cObject typoscriptObjectPath="lib.nav.breadcrumb"/>
+		</nav>
+	</div>
 </f:section>
