IMPROVEMENT: footer static content

--- a/Resources/Private/Partials/FooterInfo.html
+++ b/Resources/Private/Partials/FooterInfo.html
@@ -1,7 +1,20 @@
 <f:section name="FooterInfo">
 	<nav class="bb-footer-info">
 		<div class="container">
-			Test
+			<div class="row">
+				<div class="col-lg-3">
+					<h4>FEATURE LIST</h4>
+				</div>
+				<div class="col-lg-3">
+					<h4>TEAM MEMBERS</h4>
+				</div>
+				<div class="col-lg-3">
+					<h4>GALLERY</h4>
+				</div>
+				<div class="col-lg-3">
+					<h4>GALLERY</h4>
+				</div>
+			</div>
 		</div>
 	</nav>
 </f:section>
