BUGFIX: bootstrap content and NinjaBug content

--- a/Resources/Private/Templates/Content/GoogleMap.html
+++ b/Resources/Private/Templates/Content/GoogleMap.html
@@ -7,7 +7,7 @@
      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
 	<f:section name="Configuration">
-	<flux:flexform wizardTab="Custom" id="googleMap">
+	<flux:flexform wizardTab="NinjaBug" id="googleMap">
 		<flux:flexform.field.input name="defaultZoomLevel" default="8" eval="trim,required"/>
 		<flux:flexform.field.input name="mapHieght" default="400" eval="trim,required"/>
 		<flux:flexform.field.input name="defaultMapCenter" default="12.758232,104.699707" eval="trim,required"/>
