--- a/Resources/Private/Templates/Content/Teaser.html
+++ b/Resources/Private/Templates/Content/Teaser.html
@@ -7,7 +7,7 @@
      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
 <f:section name="Configuration">
-	<flux:flexform wizardTab="Custom" id="teaser">
+	<flux:flexform wizardTab="NinjaBug" id="teaser">
 		<flux:flexform.field.file name="image" />
 		<flux:flexform.field.input name="header" eval="trim,required"/>
 		<flux:flexform.field.text name="text" enableRichText="TRUE"/>
