--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -12,15 +12,30 @@
 	</flux:flexform>
 	<flux:flexform.grid>
 		<flux:flexform.grid.row>
+			<flux:flexform.grid.column colPos="1" name="SlideShow" />
+		</flux:flexform.grid.row>
+		<flux:flexform.grid.row>
 			<flux:flexform.grid.column colPos="0" name="Content" />
 		</flux:flexform.grid.row>
 	</flux:flexform.grid>
 </f:section>
 
 <f:section name="Content">
-	<div class="row">
-		<div class="col-lg-12">
-			<v:page.content.render column="0"/>
+<div class="home-page">
+	<f:render section="SubHeader" partial="SubHeader"/>
+</div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	<v:page.content.render column="1"/>
+</div>
+<div class="container">
+	<f:render section="Breadcrumb" partial="Breadcrumb"/>
+	<div id="main-content">
+		<f:render section="PageTitle" partial="PageTitle"/>
+		<div class="row">
+			<div class="col-lg-12">
+				<v:page.content.render column="0"/>
+			</div>
 		</div>
 	</div>
+</div>
 </f:section>
