--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -5,6 +5,21 @@ body {
 	padding-bottom: 20px;
 }
 
+/* START: Carousel slideshow */
+.carousel .item {
+	height: 555px;
+	background-color: #777;
+}
+.carousel-inner > .item > img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	height: 555px;
+}
+/* END: Carousel slideshow */
+
+
 /* START: Header and Sub Custom Style */
 	.bb-header {
 		text-shadow: 0 -1px 0 rgba(0,0,0,.15);
@@ -13,10 +28,15 @@ body {
 		box-shadow: 0 1px 0 rgba(255,255,255,.1);
 	}
 	.bb-subheader {
-		color: #cdbfe3;
+		color: #fff;
 		background-color: #563D7C;
+		width: 100%;
 	}
-	
+	.home-page .bb-subheader {
+		position: absolute;
+		z-index: 10;
+		opacity: 0.5;
+	}
 	/* BLOG: Blog override style of bootstrap */
 		.navbar-inverse .navbar-nav>.active>a,
 		.navbar-inverse .navbar-nav>.active>a:hover,
