--- a/Resources/Private/Templates/Content/Teaser.html
+++ b/Resources/Private/Templates/Content/Teaser.html
@@ -24,32 +24,39 @@
 	<strong>Link</strong>: {linkTarget}
 </f:section>
 
-<f:section name="Main">
-	<div class="text-center">
-		<f:if condition="{image}">
-			<figure>
-				<f:image src="{image}" alt="{image}" />
-			</figure>
-		</f:if>
-		<header>
-			<h3>{header}</h3>
-		</header>
-		<f:format.html>{text}</f:format.html>
-		<f:if condition="{linkTarget}">
-			<f:if condition="{linkTarget -> v:math.round()} > 0">
-				<f:then>
-					<f:link.page pageUid="{linkTarget}" class="btn btn-primary" rel="" title="{linkLabel}">
-						{linkLabel}
-					</f:link.page>
-				</f:then>
-				<f:else>
-					<a href="{linkTarget}" class="btn btn-default" rel="" title="{linkLabel}">
-						{linkLabel}
-					</a>
-				</f:else>
-			</f:if>
-		</f:if>
-	</div>
-</f:section>
+<div class="col-lg-4">
+<div id="c6" class="csc-default">
+	<img class="img-circle" data-src="holder.js/140x140" alt="140x140" style="width: 140px; height: 140px;" src="/fileadmin/_processed_/csm_cicle-logo_8c1f2ecb49.png">
+	<h2>Heading</h2>
+	<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+	<p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+</div>
+</div>
 
+
+
+
+	<f:section name="Main">
+	<f:if condition="{image}">
+		<figure>
+			<img class="img-circle" data-src="holder.js/140x140" alt="{header}" style="width: 140px; height: 140px;" src="{image}"/>
+		</figure>
+	</f:if>
+	<h2>{header}</h2>
+	<f:format.html>{text}</f:format.html>
+	<f:if condition="{linkTarget}">
+		<f:if condition="{linkTarget -> v:math.round()} > 0">
+			<f:then>
+				<f:link.page pageUid="{linkTarget}" class="btn btn-primary" rel="" title="{linkLabel}">
+					{linkLabel}
+				</f:link.page>
+			</f:then>
+			<f:else>
+				<a href="{linkTarget}" class="btn btn-default" rel="" title="{linkLabel}">
+					{linkLabel}
+				</a>
+			</f:else>
+		</f:if>
+	</f:if>
+</f:section>
 </div>
