--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -7,7 +7,7 @@ body {
 
 /* START: Carousel slideshow */
 .carousel .item {
-	height: 555px;
+	height: 556px;
 	background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -15,7 +15,7 @@ body {
 	top: 0;
 	left: 0;
 	min-width: 100%;
-	height: 555px;
+	height: 556px;
 }
 /* END: Carousel slideshow */
 
@@ -74,3 +74,9 @@ body {
 	border-top: 1px solid #463265;
 	box-shadow: 0 1px 0 rgba(255,255,255,.1);
 }
+
+.btn-primary {
+	background-color: #563d7c;
+	border-color: #463265;
+}
+
