IMPROVEMENT: border for h2 header

--- a/Resources/Public/Css/style.css
+++ b/Resources/Public/Css/style.css
@@ -5,20 +5,6 @@ body {
 	padding-bottom: 20px;
 }
 
-/* START: Carousel slideshow */
-.carousel .item {
-	height: 556px;
-	background-color: #777;
-}
-.carousel-inner > .item > img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	min-width: 100%;
-	height: 556px;
-}
-/* END: Carousel slideshow */
-
 
 /* START: Header and Sub Custom Style */
 	.bb-header {
@@ -52,11 +38,36 @@ body {
 /* END: Header and Sub Custom Style */
 
 
-#main-content {
-	min-height:458px;
-}
+/* START: Footer and Sub Custom Style */
+
+	/* START: Carousel slideshow */
+	.carousel .item {
+		height: 556px;
+		background-color: #777;
+	}
+	.carousel-inner > .item > img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		min-width: 100%;
+		height: 556px;
+	}
+	/* END: Carousel slideshow */
+
+	#main-content {
+		min-height:458px;
+	}
+	.btn-primary {
+		background-color: #563d7c;
+		border-color: #463265;
+	}
+	.row .col-lg-12 h2 {
+		border-bottom: 1px dotted #563d7c;
+	}
+/* END: Footer and Sub Custom Style */
 
 
+/* START: Footer and Sub Custom Style */
 .bb-footer-info {
 	bottom: 50px;
 	background-color: #463265;
@@ -74,9 +85,5 @@ body {
 	border-top: 1px solid #463265;
 	box-shadow: 0 1px 0 rgba(255,255,255,.1);
 }
-
-.btn-primary {
-	background-color: #563d7c;
-	border-color: #463265;
-}
+/* END: Footer and Sub Custom Style */
 
